# syfr

./: Cargo.toml
src/: app.rs  backend.rs  camera.rs  input.rs  living.rs  main.rs  movable.rs  player.rs  window.rs  world.rs
src/gui/: mod.rs
src/input/: events.rs  gamepad.rs  keyboard.rs  mapper.rs  mouse.rs  state.rs
src/utilities/: constants.rs  mod.rs
src/window/: mod.rs
src/window/gui/: mod.rs
