[package]
name = "sfyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
[dependencies]
aery = "0.5.1"
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy-sequential-actions = "0.9.0"
bevy-steamworks = "0.8.0"
bevy_common_assets = "0.8.0"
bevy_ecs = "0.12.0"
bevy_input_mapper = "0.0.3"
bevy_lunex = "0.0.9"
bevy_mod_index = "0.3.0"
bevy_rapier3d = {version = "0.23.0", features = ["simd-stable"]}
big-brain = "0.18.0"
pecs = "0.5.0"
seldom_interop = "0.5.0"
[profile.dev.package."*"]
opt-level = 3
